Archive2/ca/eb43c05f5caa2b/output
main.cpp: In constructor 'Daughter::Daughter(Son*)':
main.cpp:9:31: error: no matching function for call to 'Base::Base(Son&)'
     Daughter(Son* s) : Base(*s){};
                               ^
main.cpp:9:31: note: candidate is:
main.cpp:3:5: note: constexpr Base::Base(const Base&)
     Base(const Base&) =default;
     ^
main.cpp:3:5: note:   no known conversion for argument 1 from 'Son' to 'const Base&'
main.cpp: In constructor 'Son::Son(Daughter*)':
main.cpp:3:5: error: 'constexpr Base::Base(const Base&)' is private
main.cpp:14:31: error: within this context
     Son(Daughter* d) : Base(*d){};
                               ^
